--- a/SampleSDK/app/src/main/res/values/colors.xml
+++ b/SampleSDK/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="clrBlack1">#111111</color>
     <color name="clrBlack3">#333333</color>
     <color name="clrBlack6">#666666</color>
+    <color name="clrWhite">#FFFFFF</color>
+    <color name="clrLightGray">#F3F3F3</color>
 </resources>
