--- a/SampleSDK/app/src/main/res/layout/activity_swipe_sample.xml
+++ b/SampleSDK/app/src/main/res/layout/activity_swipe_sample.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="@color/clrLightGray"
     tools:context="com.azsamplesdk.location.LocationSampleActivity">
 
@@ -57,6 +58,13 @@
 
         </LinearLayout>
 
+        <com.prashant311.azrefresh.PowerRefreshLayout
+            android:id="@+id/powerRefreshLayout"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
         <android.support.v7.widget.RecyclerView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/recyclerView"
@@ -65,6 +73,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="1dp"
             android:paddingBottom="1dp" />
+        </com.prashant311.azrefresh.PowerRefreshLayout>
 
     </RelativeLayout>
 
